--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -63,6 +63,6 @@ layout: default
           {%- endif %}
         </article>
 
-        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=tt&d=TS_RSqlWck-8Fvk_1h7RcwL9LyxO0JZhNyyHyJygIxM&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>
+        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=TS_RSqlWck-8Fvk_1h7RcwL9LyxO0JZhNyyHyJygIxM&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
 
 </div>
