--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,8 +42,10 @@ layout: default
 
           {% if page.news -%}
           <!-- News -->
+          <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
           {%- include news.html %}
           {%- endif %}
+
           {% if page.selected_papers -%}
             <!-- Selected papers -->
             {%- include selected_papers.html %}
