--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -44,7 +44,13 @@ layout: default
           <!-- News -->
           {%- include news.html %}
           {%- endif %}
-          
+
+          <!-- News -->
+          {% if page.news and site.announcements.enabled -%}
+            <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
+            {%- include news.html limit=true %}
+          {%- endif %}
+
           {% if page.selected_papers -%}
             <!-- Selected papers -->
             {%- include selected_papers.html %}
