--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,6 +1,6 @@
           
           <div class="news">
-            <h2>Latest news</h2>
+            <h2 style="font-weight: bold;">News</h2>
             {% if site.news != blank -%} 
             {%- assign news_size = site.news | size -%}
             <div class="table-responsive" {% if site.news_scrollable and news_size > 3 %}style="max-height: 10vw"{% endif %}>
