--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -31,6 +31,12 @@ body.sticky-bottom-footer {
   img {
     width: 70%; /* 保持图片比例 */
   }
+  <div class="profile-text">
+    <h1>Prof. Zhenshan Bing</h1>
+    <p>Postdoc Researcher at <a href="https://www.ce.cit.tum.de/air/people/zhenshan-bing-drrernat/">Technical University of Munich (TUM)</a></p>
+    <p>Chair of Robotics, Artificial Intelligence, and Real-Time Systems</p>
+    <p>Munich, Germany</p>
+  </div>
 }
 
 // TODO: redefine content layout.
