--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,15 +35,17 @@ body.sticky-bottom-footer {
 
 .profile-section {
   display: flex; /* 实现图片与文字的并排布局 */
-  align-items: center; /* 垂直居中对齐 */
+  align-items: left; /* 垂直居中对齐 */
   margin: 20px 0;
 }
 
 .profile-section img {
-  width: 150px; /* 设置图片宽度 */
-  height: 150px; /* 设置图片高度 */
-  object-fit: cover; /* 确保图片裁剪适配 */
-  border-radius: 50%; /* 如果需要圆形图片 */
+  width: 70%; /* 保持图片比例 */
+  image_cicular: false # crops the image to make it circular
+  // width: 150px; /* 设置图片宽度 */
+  // height: 150px; /* 设置图片高度 */
+  // object-fit: cover; /* 确保图片裁剪适配 */
+  // border-radius: 50%; /* 如果需要圆形图片 */
   margin-right: 20px; /* 图片与文字之间的间距 */
 }
 
