--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -41,7 +41,7 @@ body.sticky-bottom-footer {
 
 .profile-section img {
   width: 70%; /* 保持图片比例 */
-  image_cicular: false /* crops the image to make it circular*/
+  // image_cicular: false /* crops the image to make it circular*/
   // width: 150px; /* 设置图片宽度 */
   // height: 150px; /* 设置图片高度 */
   // object-fit: cover; /* 确保图片裁剪适配 */
