--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,7 +45,7 @@ body.sticky-bottom-footer {
   // width: 150px; /* 设置图片宽度 */
   // height: 150px; /* 设置图片高度 */
   // object-fit: cover; /* 确保图片裁剪适配 */
-  // border-radius: 50%; /* 如果需要圆形图片 */
+  border-radius: 0%; /* 如果需要圆形图片 */
   margin-right: 20px; /* 图片与文字之间的间距 */
 }
 
