--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -40,11 +40,12 @@ body.sticky-bottom-footer {
 }
 
 .profile-section img {
-  width: 20%; /* 保持图片比例 */
+  width: 150px;
+  height: auto; /* 按比例缩放图片 */
   // image_cicular: false /* crops the image to make it circular*/
   // width: 150px; /* 设置图片宽度 */
   // height: 150px; /* 设置图片高度 */
-  // object-fit: cover; /* 确保图片裁剪适配 */
+  object-fit: cover; /* 确保图片裁剪适配 */
   border-radius: 0%; /* 如果需要圆形图片 */
   margin-right: 20px; /* 图片与文字之间的间距 */
 }
