--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,9 +14,9 @@ $max-content-width: {{ site.max_width }};
   "distill"
 ;
 
-body {
-  background-color: #F7F7F7 !important; /* 替换为你想要的颜色 */
-}
+// body {
+//   background-color: #F7F7F7 !important; /* 替换为你想要的颜色 */
+// }
 
 
 .section-divider {
