--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,9 +19,9 @@ $max-content-width: {{ site.max_width }};
 // }
 
 
-.section-divider {
-  border: 0 !important;
-  border-top: 1px solid #ddd !important;
-  margin: 20px 0 !important;
-  width: 100% !important;
-}
+// .section-divider {
+//   border: 0 !important;
+//   border-top: 1px solid #ddd !important;
+//   margin: 20px 0 !important;
+//   width: 100% !important;
+// }
