--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -66,6 +66,20 @@ body.sticky-bottom-footer {
   margin-right: 40px; /* 图片与文字之间的间距 */
 }
 
+.social-icons {
+  margin-top: 10px;
+}
+
+.social-icons a {
+  margin-right: 10px;
+  font-size: 18px;
+  text-decoration: none; /* 去掉下划线 */
+  color: inherit; /* 使用当前文本颜色 */
+}
+
+.social-icons a:hover {
+  color: #0073e6; /* 鼠标悬停时更改颜色 */
+}
 
 
 
