--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -50,19 +50,20 @@ layout: default
           {%- endif %}
           {%- if page.social %}
           <!-- Social -->
-          <div class="social">
+<!--           <div class="social">
             <div class="contact-icons">
             {% include social.html %}
             </div>
 
             <div class="contact-note">
               {{ site.contact_note }}
-            </div>
+            </div> -->
             
           </div>
           {%- endif %}
         </article>
 
-        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=TS_RSqlWck-8Fvk_1h7RcwL9LyxO0JZhNyyHyJygIxM&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
+        <!-- Visitor map -->
+<!--         <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=TS_RSqlWck-8Fvk_1h7RcwL9LyxO0JZhNyyHyJygIxM&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>  -->
 
 </div>
