--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -50,14 +50,24 @@ $max-content-width: {{ site.max_width }};
   scroll-behavior: smooth; /* 平滑滚动效果 */
 }
 
+// .scroll-item {
+//   flex: 0 0 auto; /* 保持子元素的宽度 */
+//   height: : 300px; /* 每个卡片的高度 */
+//   border: 1px solid #ddd;
+//   border-radius: 1px;
+//   padding: 8px;
+//   text-align: center;
+// }
+
 .scroll-item {
-  flex: 0 0 auto; /* 保持子元素的宽度 */
-  height: : 300px; /* 每个卡片的高度 */
+  height: 300px; /* 固定高度 */
+  aspect-ratio: 16 / 9; /* 设置宽高比例，例如16:9 */
   border: 1px solid #ddd;
   border-radius: 1px;
   padding: 8px;
   text-align: center;
 }
+
 
 .scroll-item img {
   width: 100%; /* 图片占满卡片宽度 */
