--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -64,6 +64,6 @@ layout: default
         </article>
 
         <!-- Visitor map -->
-<!--         <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=TS_RSqlWck-8Fvk_1h7RcwL9LyxO0JZhNyyHyJygIxM&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>  -->
+        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=TS_RSqlWck-8Fvk_1h7RcwL9LyxO0JZhNyyHyJygIxM&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script> 
 
 </div>
