--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -51,6 +51,31 @@ $max-content-width: {{ site.max_width }};
   border: none; /* 移除边框 */
 }
 
+/* 设置滚动条整体样式 */
+.scroll-container::-webkit-scrollbar {
+  height: 8px; /* 横向滚动条的高度 */
+  background-color: #f5f5f5; /* 滚动条背景颜色 */
+  border-radius: 10px; /* 圆角 */
+}
+
+/* 滚动条轨道样式 */
+.scroll-container::-webkit-scrollbar-track {
+  background: #f5f5f5; /* 滚动条轨道颜色 */
+  border-radius: 10px; /* 圆角 */
+}
+
+/* 滚动条滑块样式 */
+.scroll-container::-webkit-scrollbar-thumb {
+  background-color: #c4c4c4; /* 滑块颜色 */
+  border-radius: 10px; /* 圆角 */
+}
+
+/* 滑块悬停时样式 */
+.scroll-container::-webkit-scrollbar-thumb:hover {
+  background-color: #b0b0b0; /* 悬停时的颜色 */
+}
+
+
 .scroll-item {
   flex: 0 0 auto; /* 子元素宽度固定 */
   height: 300px; /* 根据内容动态调整高度 */
