--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -134,7 +134,7 @@ $max-content-width: {{ site.max_width }};
 
 .date {
   font-weight: bold;
-  font-size: 12px;
+  font-size: 1rem;
   margin-right: 8px;
   color: #383838;
 }
