--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -1,26 +1,34 @@
 ---
 ---
 <!-- _layouts/bib.html -->
-      <div class="row">
-        <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
-        {%- if entry.preview -%}
-          {% if entry.preview contains '://' -%}
-          <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
-          {%- else -%}
-          <img class="preview z-depth-1 rounded" src="{{ entry.preview | prepend: '/assets/img/publication_preview/' | relative_url }}">
-          {%- endif -%}
-        {%- elsif entry.abbr -%}
-          {%- if site.data.venues[entry.abbr] -%}
-            {%- assign venue_style = nil -%}
-            {%- if site.data.venues[entry.abbr].color != blank -%}
-              {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
-            {%- endif -%}
-            <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
-          {%- else -%}
-            <abbr class="badge">{{entry.abbr}}</abbr>
-          {%- endif -%}
+<div class="row">
+  <div class="col-sm-2">
+    <!-- Display the preview image -->
+    {%- if entry.preview -%}
+      {% if entry.preview contains '://' -%}
+      <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
+      {%- else -%}
+      <img class="preview z-depth-1 rounded" src="{{ entry.preview | prepend: '/assets/img/publication_preview/' | relative_url }}">
+      {%- endif -%}
+    {%- endif -%}
+
+    <!-- Display the abbreviation -->
+    {%- if entry.abbr -%}
+      {%- if site.data.venues[entry.abbr] -%}
+        {%- assign venue_style = nil -%}
+        {%- if site.data.venues[entry.abbr].color != blank -%}
+          {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
         {%- endif -%}
-        </div>
+        <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}>
+          <a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a>
+        </abbr>
+      {%- else -%}
+        <abbr class="badge">{{entry.abbr}}</abbr>
+      {%- endif -%}
+    {%- endif -%}
+  </div>
+</div>
+
 
         <!-- Entry bib key -->
         <div id="{{entry.key}}" class="col-sm-8">
