--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -9,10 +9,8 @@
           {%- else -%}
           <img class="preview z-depth-1 rounded" src="{{ entry.preview | prepend: '/assets/img/publication_preview/' | relative_url }}">
           {%- endif -%}
-        {%- endif -%} 
-
-
-        {%- if entry.abbr -%}
+          
+        {%- elsif entry.abbr -%}
           {%- if site.data.venues[entry.abbr] -%}
             {%- assign venue_style = nil -%}
             {%- if site.data.venues[entry.abbr].color != blank -%}
