--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,10 @@ layout: default
         <div class="post">
 
           <header class="post-header">
-            <h1 class="post-title">{{ page.title }}</h1>
+            <!-- <h1 class="post-title">{{ page.title }}</h1> -->
+            {% unless page.hide_title %}
+              <h1 class="page-title">{{ page.title }}</h1>
+            {% endunless %}
             <p class="post-description">{{ page.description }}</p>
           </header>
 
