--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,6 +14,18 @@ layout: default
 
           <article>
             {{ content }}
+
+            {% if page.news %}
+              {% include news.html %}
+            {% endif %}
+
+            {% if page.selected_papers %}
+              {% include selected_papers.html %}
+            {% endif %}
+
+            {% if page.social %}
+              {% include social.html %}
+            {% endif %}
           </article>
 
         </div>
