--- a/_includes/news.html
+++ b/_includes/news.html
@@ -13,7 +13,9 @@
               {% endif %}
               {% for item in news limit: news_limit %} 
                 <tr>
-                  <th scope="row">{{ item.date | date: "%b %-d, %Y" }}</th>
+                  <th scope="row" style="white-space: nowrap; font-weight: normal; padding-right: 20px;">
+                    {{ item.date | date: "%b %-d, %Y" }}
+                  </th>
                   <td>
                     {% if item.inline -%} 
                       {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
