--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,12 @@
       <!-- Nav Bar -->
       <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
         <div class="container">
+
+          <!-- ✅ Logo added here -->
+          <a class="navbar-brand pr-3" href="{{ '/' | relative_url }}">
+            <img src="{{ '/assets/img/Lab_Logo.png' | relative_url }}" alt="Logo" style="height: 32px;">
+          </a>
+
           {% if page.permalink != '/' -%}
           <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
             {%- if site.title == "blank" -%}
