--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 
           <!-- ✅ Logo added here -->
           <a class="navbar-brand pr-3" href="{{ '/' | relative_url }}">
-            <img src="{{ '/assets/img/Lab_Logo.png' | relative_url }}" alt="Logo" style="height: 32px;">
+            <img src="{{ '/assets/img/Lab_Logo_Only.png' | relative_url }}" alt="Logo" style="height: 32px;">
           </a>
 
           {% if page.permalink != '/' -%}
