--- a/_includes/bib.html
+++ b/_includes/bib.html
@@ -1,169 +1,3 @@
-{% assign count = include.count %}
-<div class="row">
-  <div class="col-sm-1 pub-number">[{{ count }}]</div>
-
-  <div class="col-sm-2 abbr">
-    {%- if entry.abbr -%}
-      {%- if site.data.venues[entry.abbr] -%}
-        {%- assign venue_style = nil -%}
-        {%- if site.data.venues[entry.abbr].color != blank -%}
-          {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
-        {%- endif -%}
-        <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
-      {%- else -%}
-        <abbr class="badge">{{entry.abbr}}</abbr>
-      {%- endif -%}
-    {%- endif -%}
-  </div>
-
-  <div id="{{entry.key}}" class="col-sm-7">
-    {% if entry.type == "thesis" -%}
-      {{reference}}
-    {%- else %}
-      <div class="title">{{entry.title}}</div>
-      <div class="author">
-        {% assign author_array_size = entry.author_array | size %}
-        {% assign author_array_limit = author_array_size %}
-        {%- if site.max_author_limit and author_array_size > site.max_author_limit %}
-          {% assign author_array_limit = site.max_author_limit %}
-        {% endif %}
-
-        {%- for author in entry.author_array limit: author_array_limit -%}
-          {%- assign author_is_self = false -%}
-          {%- assign author_last_name = author.last | remove: "¶" | remove: "&" | remove: "*" | remove: "†" | remove: "^" -%}
-          {%- if author_last_name == site.scholar.last_name -%}
-            {%- if site.scholar.first_name contains author.first -%}
-              {%- assign author_is_self = true -%}
-            {%- endif -%}
-          {%- endif -%}
-          {%- assign coauthor_url = nil -%}
-          {%- if site.data.coauthors[author_last_name] -%}
-            {%- for coauthor in site.data.coauthors[author_last_name] -%}
-              {%- if coauthor.firstname contains author.first -%}
-                {%- assign coauthor_url = coauthor.url -%}
-                {%- break -%}
-              {%- endif -%}
-            {%- endfor -%}
-          {%- endif -%}
-
-          {%- if forloop.length > 1 -%}
-            {%- if forloop.first == false -%},&nbsp;{%- endif -%}
-            {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%}
-          {%- endif -%}
-          {%- if author_is_self -%}
-            <em>{{author.first}} {{author.last}}</em>
-          {%- else -%}
-            {%- if coauthor_url -%}
-              <a href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
-            {%- else -%}
-              {{author.first}} {{author.last}}
-            {%- endif -%}
-          {%- endif -%}
-        {%- endfor -%}
-
-        {%- assign more_authors = author_array_size | minus: author_array_limit -%}
-        {%- if more_authors > 0 -%}
-          , and
-          <span
-              class="more-authors"
-              title="click to view {{more_authors}} more authors"
-              onclick="
-                var element = $(this);
-                element.attr('title', '');
-                var more_authors_text = '{{ more_authors }} more authors';
-                var cursorPosition = 0;
-                var textAdder = setInterval(function(){
-                  element.text(more_authors_text.substring(0, ++cursorPosition));
-                  if (cursorPosition == more_authors_text.length){
-                    clearInterval(textAdder);
-                  }
-              }, '{{site.more_authors_animation_delay}}');
-              "
-          >{{ more_authors }} more authors</span>
-        {%- endif -%}
-      </div>
-
-      {%- if entry.type == "article" -%}
-        {%- capture entrytype -%}<em>{{entry.journal}}</em>{%- endcapture -%}
-      {%- elsif entry.type == "inproceedings" -%}
-        {%- capture entrytype -%}<em>In {{entry.booktitle}}</em>{%- endcapture -%}
-      {%- else -%}
-        {%- capture entrytype -%}{%- endcapture -%}
-      {%- endif -%}
-      {%- if entry.month -%}
-        {%- capture entrymonth -%}{{ " " }}{{ entry.month | capitalize }}{%- endcapture -%}
-      {%- endif -%}
-      {%- if entry.year -%}
-        {%- capture entryyear -%}{{ " " }}{{entry.year}}{%- endcapture -%}
-      {%- endif -%}
-      <div class="periodical">{{ entrytype }}{{ entrymonth }}{{ entryyear }}</div>
-    {%- endif %}
-
-    <div class="links">
-      {%- if entry.abstract %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
-      {%- endif %}
-      {%- if entry.arxiv %}
-        <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
-      {%- endif %}
-      {%- if entry.bibtex_show %}
-        <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
-      {%- endif %}
-      {%- if entry.html %}
-        <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
-      {%- endif %}
-      {%- if entry.pdf %}
-        {% if entry.pdf contains '://' -%}
-          <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
-        {%- else -%}
-          <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
-        {%- endif %}
-      {%- endif %}
-      {%- if entry.supp %}
-        {% if entry.supp contains '://' -%}
-          <a href="{{ entry.supp }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
-        {%- else -%}
-          <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
-        {%- endif %}
-      {%- endif %}
-      {%- if entry.blog %}
-        <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
-      {%- endif %}
-      {%- if entry.code %}
-        <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
-      {%- endif %}
-      {%- if entry.poster %}
-        {% if entry.poster contains '://' -%}
-          <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
-        {%- else -%}
-          <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
-        {%- endif %}
-      {%- endif %}
-      {%- if entry.slides %}
-        {% if entry.slides contains '://' -%}
-          <a href="{{ entry.slides }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
-        {%- else -%}
-          <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
-        {%- endif %}
-      {%- endif %}
-      {%- if entry.website %}
-        <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
-      {%- endif %}
-      {%- if entry.video %}
-        <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
-      {%- endif %}
-    </div>
-
-    {% if entry.abstract -%}
-    <div class="abstract hidden">
-      <p>{{ entry.abstract }}</p>
-    </div>
-    {%- endif -%}
-
-    {% if entry.bibtex_show -%}
-    <div class="bibtex hidden">
-      {% highlight bibtex %}{{ entry.bibtex | hideCustomBibtex }}{% endhighlight %}
-    </div>
-    {%- endif %}
-  </div>
+<div class="pub">
+  <p><strong>[{{ count }}]</strong> {{ entry.key }}</p>
 </div>
